# learn-me-a-haskell

./: .gitignore  LICENSE  README.md  Setup.hs  cabal.project  experiments.cabal  package.yaml
src/: Bag.hs  Contains.hs  HList.hs  HTree.hs  OneOf.hs  Utils.hs
src/Bag/: Include.hs  Populate.hs  QuantifiedInstances.hs  Types.hs
src/HList/: Build.hs  Fold.hs  Types.hs  Update.hs
src/HTree/: Access.hs  Balance.hs  Delete.hs  Insert.hs  Types.hs
src/OneOf/: Fold.hs  Inject.hs  Types.hs
src/Utils/: Contains.hs  Lift.hs  Tuple.hs
src/Utils/Tuple/: TH.hs
test/Test/Form/: Example.hs
