name:                experiments
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Harding
maintainer:          tomjharding@live.co.uk
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Utils
                     , HTree
                     , HList
                     , Contains
                     , Bag
                     , OneOf
                     , HTree.Insert
                     , HTree.Balance
                     , HTree.Delete
                     , HTree.Types
                     , HTree.Access
                     , OneOf.Inject
                     , OneOf.Fold
                     , OneOf.Types
                     , Bag.Include
                     , Bag.Populate
                     , Bag.Types
                     , HList.Fold
                     , HList.Update
                     , HList.Build
                     , HList.Types

  -- We need QuantifiedConstraints for this to work!
  if impl(ghc >= 8.6)
   exposed-modules:    Bag.QuantifiedInstances

  build-depends:       base
                     , aeson
                     , bytestring
                     , generic-lens
                     , scientific
                     , text
                     , unordered-containers
                     , validation
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable test
  build-depends:       base
                     , doctest
  main-is:             Main.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
