name:                experiments
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Harding
maintainer:          tomjharding@live.co.uk
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Bag
                     , Bag.Include
                     , Bag.Populate
                     , Bag.Types
                     , HList
                     , HList.Build
                     , HList.Fold
                     , HList.Types
                     , HList.Update
                     , HTree
                     , HTree.Access
                     , HTree.Balance
                     , HTree.Delete
                     , HTree.Insert
                     , HTree.Types
                     , OneOf
                     , OneOf.Fold
                     , OneOf.Inject
                     , OneOf.Types
                     , Utils
                     , Utils.Contains
                     , Utils.Lift

  -- We need QuantifiedConstraints for this to work!
  if impl(ghc >= 8.6)
   exposed-modules:    Bag.QuantifiedInstances

  build-depends:       base
                     , aeson
                     , bytestring
                     , generic-lens
                     , scientific
                     , text
                     , unordered-containers
                     , validation
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable test
  build-depends:       base
                     , doctest
  main-is:             Main.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
